# pihtivacuum

./: .gitignore  README.md  elements_state.json  encrypt_users.py  hash_passwords.py  index.html  logs.json  pyproject.toml  requirements.txt  script.js  server.py  state.json  users.json.enc
deploy/: nginx-pihti.conf  pihti.service
src/pihti/: __init__.py  __main__.py  cli.py  encrypt_users.py  hash_passwords.py  manage_users.py  server.py
src/pihti/static/css/: styles.css
src/pihti/static/js/: diagram.js  history.js
src/pihti/templates/: history.html  index.html  login.html  navbar.html
src/pihti/utils/: __init__.py  hostinfo.py
static/: elementsConfig.json  index.html  logs.html  script.js
static/css/: styles.css
static/js/: diagram.js  history.js  navbar.js  plasmaplots.js
templates/: base.html  history.html  index.html  login.html  logs.html  navbar.html  plasmaplots.html  plasmaplots_no_settings.html
