[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pihtivacuum-server"
version = "0.1.0"
description = "Flask server for interactive SVG plasma and vacuum diagnostics"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask",
    "flask-cors",
    "pandas",
    "plotly",
    "cryptography",
]

[tool.setuptools.packages.find]
where = ["."]
include = []
