[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pihti"
version = "0.1.0"
description = "Flask server for interactive SVG plasma and vacuum diagnostics"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask",
    "flask-cors",
    "pandas",
    "plotly",
    "cryptography",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["pihti*"]

[tool.setuptools.package-data]
pihti = [
    "templates/*.html",
    "static/*",
    "static/**/*",
    "media/*",
]
